--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,13 @@ url: https://www.yacavone.net/
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/yomi"
 
+excerpt_separator: <!--more-->
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+permalink: /:categories/:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
