add verses tag plugin, add Israel-Palestine statement

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Matt's Nach Yomi
 
 # Short bio or description (displayed in the header)
-description: A daily blog of my thoughts as I study Nach Yomi.
+description: A daily blog as I study Nach Yomi from both a Jewish and an academic perspective.
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
