--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ baseurl: "/yomi"
 
 excerpt_separator: <!--more-->
 
+exclude: [vendor]
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
