--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,6 @@ baseurl: "/yomi"
 
 excerpt_separator: <!--more-->
 
-exclude:
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/
-
 #
 # !! You don't need to change any of the configuration flags below !!
 #
@@ -58,6 +52,11 @@ plugins:
 exclude:
   - Gemfile
   - Gemfile.lock
+  - node-modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
   - LICENSE
   - README.md
   - CNAME
