--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Matt's Nach Yomi
+title: Matt's Nach Yomi
 
 # Short bio or description (displayed in the header)
-description: A daily blog as I study Nach Yomi from both a Jewish and an academic perspective.
+description: A daily blog of my thoughts as I study Nach Yomi.
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
